# Foxbat

./: README.md  main.py  pyproject.toml  requirements.txt  triagem e ccqrs.docx
