[project]
name = "foxbat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bandit>=1.9.2",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.0",
    "coverage>=7.13.0",
    "fastapi>=0.127.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "networkx>=3.6.1",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "pyvis>=0.3.2",
    "redis>=7.1.0",
    "reportlab>=4.4.7",
    "rich>=14.2.0",
    "safety>=3.7.0",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
